// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CartCount/> Matches snapshot 1`] = `
<div>
  <span
    class="CartCount__AnimationStyles-sc-xxvp4g-1 AiBOb"
  >
    <div>
      <div
        class="CartCount__Dot-sc-xxvp4g-0 hfcIAl count"
      >
        10
      </div>
    </div>
  </span>
</div>
`;

exports[`<CartCount/> Updates via props 1`] = `
<div>
  <span
    class="CartCount__AnimationStyles-sc-xxvp4g-1 AiBOb"
  >
    <div>
      <div
        class="CartCount__Dot-sc-xxvp4g-0 hfcIAl count count-enter count-enter-active"
      >
        12
      </div>
      <div
        class="CartCount__Dot-sc-xxvp4g-0 hfcIAl count count-exit count-exit-active"
      >
        11
      </div>
    </div>
  </span>
</div>
`;
